<resources>
    <string name="app_name">Firstdoctor</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="remember_me">Remember me</string>
</resources>