<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="#707070"
            android:textSize="37sp"
            android:textStyle="bold" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginLeft="80dp"
            android:layout_marginTop="60dp"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="37sp"
            android:textStyle="bold" />
    <View
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:padding="20dp"
        android:layout_marginLeft="95dp"
        android:background="@color/white" />
</LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/first_name"
            android:layout_marginTop="15dp"

            android:textColor="@color/white"
            android:textColorHint="#707070"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/last_name"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textColorHint="#707070"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/age"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textColorHint="#707070"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/address"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textColorHint="#707070"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textColorHint="#707070"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textColorHint="#707070"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/bt_shape"
        android:text="@string/sign_up"
        android:textColor="@color/bg_color"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>