<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/sign_background"
            android:scaleType="fitXY">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/dental_doctor" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/signIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="60dp"
                            android:padding="10dp"
                            android:text="@string/sign_in"
                            android:textColor="@color/white"
                            android:textSize="37sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="120dp"
                            android:layout_height="1dp"
                            android:layout_marginLeft="10dp"
                            android:background="@color/white"
                            android:padding="20dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/signUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="60dp"
                            android:padding="10dp"
                            android:text="@string/sign_up"
                            android:textColor="#707070"
                            android:textSize="37sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/white"
                        android:hint="@string/email"
                        android:textColor="@color/white"
                        android:textColorHint="#707070"
                        tools:ignore="UnusedAttribute" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/white"
                        android:hint="@string/password"
                        android:textColor="@color/white"
                        android:textColorHint="#707070"
                        tools:ignore="UnusedAttribute" />


                </LinearLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:buttonTint="@color/white"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signIn_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bt_shape"
                    android:text="@string/sign_in"
                    android:textColor="@color/bg_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/google_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bt_shape"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@color/bg_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>